--- a/flask_app/template/index.html
+++ b/flask_app/template/index.html
@@ -1,1 +1,43 @@
+<!-- templates/index.html -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Flask App</title>
+  </head>
+  <body>
+    <!-- Header with big label -->
+    <h1 style="text-align: center; font-size: 32px">Text Tweet Classifier</h1>
+
+    <!-- Text box and button -->
+    <div style="text-align: center">
+      <input type="text" id="textbox" />
+      <button onclick="submitData()">Submit</button>
+    </div>
+    <br></br>
+    <div style="text-align: center">
+        <h1>The input text <span id="ïnputText" style="color: orangered;"></span> is classified as:</h1>
+        <div style="border: 1px solid black; margin: auto;
+        width: 50%;
+        border: 3px solid green;
+        padding: 10px;">
+          <h1><span id="sessionItemValue"></span></h1>
+        </div>
+    </div>
+    <!-- Add any other content below if needed -->
+  </body>
+</html>
+
+<!-- Add your JavaScript code if needed -->
+<script>
+  function submitData() {
+    // Get the input value from the text box
+    var inputValue = document.getElementById("textbox").value;
+    inputValue = inputValue.replace("(@[A-Za-z0-9_]+)|[^\w\s\n]|#|http\S+", "")
+    inputValue = inputValue.toLowerCase()
+    sessionStorage.setItem("tweetClassified","Relevant")
+    document.getElementById('sessionItemValue').textContent = sessionStorage.getItem('tweetClassified');
+    document.getElementById('ïnputText').textContent = inputValue;
+    // Add any other logic here to handle the submitted data
+  }
+</script>
 
